# Naye-Mitra

./: explanation.txt  requirements.txt  suggestion.txt
DIagrams/: F1.py
Projects/Law_AI/: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
Projects/Law_AI/law-gpt-web/: package-lock.json  package.json  tailwind.config.ts
Projects/Law_AI/law-gpt-web/app/components/: Sidebar.tsx
Projects/Law_AI/law-gpt-web/app/doc-builder/: page.tsx
Projects/Law_AI/law-gpt-web/app/login/: page.tsx
Projects/Law_AI/scripts/: script.py
Projects/Law_AI/src/law_ai/: api.py  dignostic.py  engine.py  ingest.py  performance_test.py  test1_contradiction_results.csv  test2_ablation_results.csv
data/: bm25_index.pkl
law-gpt-web/app/: globals.css  page.tsx
law-gpt-web/app/components/: ChatInput.tsx  Message.tsx  TypingAnimation.tsx
law-gpt-web/app/login/: page.tsx
law-gpt-web/app/workspace/: page.tsx
scripts/: dignostic.py
src/law_ai/: ablation_logic.py  ablation_results.csv  ablation_runner.py  ablation_test.py  api.py  cli.py  config.py  engine.py  generate_charts.py  indest_json.py  indian_law_benchmark.csv  ingest.py  ingest_pdf.py  logger.py  performance_test.py  run_lawgpt_benchmark.py  test1_contradiction.py  test3_performance_results.csv
