[project]
name = "law-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "chromadb>=0.3.23",
    "fastapi>=0.124.0",
    "langchain>=1.1.2",
    "pypdf>=6.4.1",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
